@@ -13,6 +13,7 @@
 * dLocal: Require secret_key [curiousepic] #3080
 * Adyen: Implement 3DS [nfarve] #3076
 * Adyen: Add 3DS Fix [nfarve] #3081
+* Payeezy: Add `stored_credentials` [nfarve] #3083)
 
 == Version 1.88.0 (November 30, 2018)
 * Added ActiveSupport/Rails master support [Edouard-chin] #3065
